tests/snapshots/examples_fixtures/type_system__TypeSystem__BoundaryUnknown.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/BoundaryUnknown.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.BoundaryUnknown` doesn't match file path `//?/examples/type_system/TypeSystem/BoundaryUnknown.flx`.

  examples/type_system/TypeSystem/BoundaryUnknown.flx:1:1
  |
1 | module TypeSystem.BoundaryUnknown {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
