tests/snapshots/examples_fixtures/type_system__TypeSystem__RealProgramDomain.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/RealProgramDomain.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.RealProgramDomain` doesn't match file path `examples/type_system/TypeSystem/RealProgramDomain.flx`.

  examples/type_system/TypeSystem/RealProgramDomain.flx:1:1
  |
1 | module TypeSystem.RealProgramDomain {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
